the goaltender with the best average skill rating score will be ranked first